--- a/market/templates/login.html
+++ b/market/templates/login.html
@@ -6,18 +6,18 @@
 {% block content %}
 <body class="text-center">
     <div class="container">
-        <form method="POST" class="form-signin" style="color:white">
+        <form method="POST" class="form-signin center" style="color:white">
             {{ form.hidden_tag() }}
-            <img class="mb-4" src="https://res.cloudinary.com/jimshapedcoding/image/upload/v1597332609/android-icon-192x192_ove2a7.png" alt="">
+            <img class="mb-4" src="../static/images/marketplace_collaboration.png" alt="" width= 300 px height = 300 px>
             <h1 class="h3 mb-3 font-weight-normal">
                 Please Login
             </h1>
             <br>
             {{ form.username.label() }}
-            {{ form.username(class="form-control", placeholder="User Name") }}
+            {{ form.username(class="form-control custom-width", placeholder="User Name") }}
 
             {{ form.password.label() }}
-            {{ form.password(class="form-control", placeholder="Password") }}
+            {{ form.password(class="form-control custom-width", placeholder="Password") }}
 
             <br>
 
