--- a/market/templates/home.html
+++ b/market/templates/home.html
@@ -4,12 +4,12 @@ endblock %} {% block content %}
   class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark"
   style="color: white"
 >
-  <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4 font-weight-normal">THE FLASK MARKET</h1>
+  <div class="col-md-5 p-lg-5 mx-auto my-5" >
+    <h1 class="display-4 font-weight-normal">THE FLASK EXCHANGE</h1>
     <p class="lead font-weight-normal">
-      To start purchasing products, clicking below
+      To start trading products, click below
     </p>
-    <a class="btn btn-primary" href="{{ url_for('market_page') }}"
+    <a class="btn btn-primary custom-button" href="{{ url_for('market_page') }}"
       >I Want Access</a
     >
   </div>
