--- a/market/templates/market.html
+++ b/market/templates/market.html
@@ -6,8 +6,8 @@ Market Page
 
 <div class="row" style="margin-top:20px; margin-left:20px">
    <div class="col-8">
-       <h2>Available items on the Market</h2>
-       <p>Click on one of the items to start buying</p>
+       <h2>Available items on the Exchange</h2>
+       <p>Select an item to start own</p>
        <br>
       <table class="table table-hover table-dark">
          <thead>
@@ -40,7 +40,7 @@ Market Page
    </div>
    <div class="col-4">
         <h2>Owned Items</h2>
-        <p>Click on sell item to put an item back on the Market</p>
+        <p>Click on item to put it back on the Exchange</p>
         <br>
         <div class="row">
            {% for owned_item in owned_items %}
