--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -5,17 +5,31 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
       <style>
         .center {
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100vh; /* Optional: Center vertically on the viewport */
+            height: 100vh;
+            
         }
         .custom-width {
             width: 300px; 
         }
+        .custom-button {
+            background-color: rgb(210, 218, 210);
+            color: rgb(9, 9, 9);
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+
+        }
+        .custom-button:hover {
+        background-color: rgb(93, 126, 115); /* Change color on hover */
+        /* You can add more styles for the hover effect */
+    }
       </style>
       
       <title>
@@ -26,7 +40,7 @@
    </head>
    <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Flask Market</a>
+      <a class="navbar-brand" href="#">Flask Exchange</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,7 +50,7 @@
                 <a class="nav-link" href="{{ url_for('home_page') }}">Home </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
+                <a class="nav-link" href="{{ url_for('market_page') }}">Exchange</a>
             </li>
         </ul>
           {% if current_user.is_authenticated %}
@@ -71,7 +85,7 @@
            {% for category, message in messages %}
               <div class="alert alert-{{ category }}">
                   <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
+                      <!-- <span aria-hidden="true">&times;</span> -->
                   </button>
                   {{ message }}
               </div>
@@ -90,7 +104,7 @@
    <style>
       body {
       background-color: #212121;
-      color: white)
+      color: slategray;
       }
    </style>
 </html>
