--- a/market/templates/login.html
+++ b/market/templates/login.html
@@ -24,10 +24,10 @@
 
             <div class="checkbox mb-3">
                <h6>Do not have an account?</h6>
-               <a class="btn btn-sm btn-secondary" href="{{ url_for('register_page') }}">Register</a>
+               <a class="btn btn-sm btn-secondary custom-button custom-width" href="{{ url_for('register_page') }}">Register</a>
             </div>
 
-            {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
+            {{ form.submit(class="btn btn-lg btn-block btn-primary custom-button custom-width") }}
 
         </form>
     </div>
