--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -6,7 +6,7 @@
 {% block content %}
 <body class="text-center">
     <div class="container">
-        <form method="POST" class="form-register center" style="color:white">
+        <form method="POST" class="form-register center " style="color:white">
             {{ form.hidden_tag() }}
             <img class="mb-4" src="../static/images/marketplace_collaboration.png" alt="" width= 300 px height = 300 px>
             <h1 class="h3 mb-3 font-weight-normal">
@@ -29,10 +29,10 @@
 
             <div class="checkbox mb-3">
                <h6>Already have an account?</h6>
-               <a class="btn btn-sm btn-secondary" href="{{ url_for('login_page') }}">Login</a>
+               <a class="btn btn-sm btn-secondary custom-button custom-width" href="{{ url_for('login_page') }}">Login</a>
             </div>
 
-            {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
+            {{ form.submit(class="btn btn-lg btn-block btn-primary custom-button custom-width") }}
 
         </form>
     </div>
