--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -6,32 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-      <style>
-        .center {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            height: 100vh;
-            
-        }
-        .custom-width {
-            width: 300px; 
-        }
-        .custom-button {
-            background-color: rgb(210, 218, 210);
-            color: rgb(9, 9, 9);
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-
-        }
-        .custom-button:hover {
-        background-color: rgb(93, 126, 115); /* Change color on hover */
-        /* You can add more styles for the hover effect */
-    }
-      </style>
-      
+      <link rel="stylesheet" href="../static/styles.css">
       <title>
           {% block title %}
 
